[gd_scene load_steps=9 format=2]

[ext_resource path="res://Dialogue/PauseCalculator.tscn" type="PackedScene" id=1]
[ext_resource path="res://_fonts/yoster.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://_sprites/speakbox.png" type="Texture" id=3]
[ext_resource path="res://Dialogue/Dialogue.gd" type="Script" id=4]
[ext_resource path="res://_sounds/Blop-Mark_DiAngelo-79054334-modified.wav" type="AudioStream" id=5]
[ext_resource path="res://Dialogue/DialogueVoicePlayer.gd" type="Script" id=6]
[ext_resource path="res://_sprites/prps/talk.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_right = 9.0
script = ExtResource( 4 )

[node name="Background" type="NinePatchRect" parent="."]
margin_left = 73.0
margin_top = 402.0
margin_right = 971.0
margin_bottom = 553.0
texture = ExtResource( 3 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Content" type="RichTextLabel" parent="."]
anchor_left = 0.507
anchor_top = 0.792
anchor_right = 0.507
anchor_bottom = 0.792
margin_left = -422.168
margin_top = -52.2
margin_right = 425.832
margin_bottom = 56.8
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="TypeTyper" type="Timer" parent="."]
wait_time = 0.04

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[node name="DialogueVoicePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
script = ExtResource( 6 )

[node name="PauseCalculator" parent="." instance=ExtResource( 1 )]

[node name="TalkIndicator" type="Sprite" parent="."]
position = Vector2( 924, 523 )
texture = ExtResource( 7 )

[connection signal="timeout" from="TypeTyper" to="." method="_on_TypeTyper_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_PauseTimer_timeout"]
[connection signal="finished" from="DialogueVoicePlayer" to="." method="_on_DialogueVoicePlayer_finished"]
[connection signal="pause_requested" from="PauseCalculator" to="." method="_on_PauseCalculator_pause_requested"]
